--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,14 @@
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-storage</artifactId>
     </dependency>
+
+    <!-- !SCRIBEJAVA -->
+    <dependency>
+      <groupId>com.github.scribejava</groupId>
+      <artifactId>scribejava-apis</artifactId>
+      <version>6.4.1</version> // please use always the latest version
+    </dependency>
+    
   </dependencies>
 
   <build>
