--- a/flutter_code/flutter_basic/pubspec.yaml
+++ b/flutter_code/flutter_basic/pubspec.yaml
@@ -33,9 +33,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
   intl: ^0.18.1
@@ -43,6 +40,11 @@ dependencies:
   google_maps_flutter: ^2.2.8
   google_maps_flutter_web: ^0.4.0+9
   http: ^0.13.6
+  webview_flutter: ^2.0.14
+
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
 
 dev_dependencies:
   flutter_test:
