--- a/flutter_code/flutter_basic/pubspec.yaml
+++ b/flutter_code/flutter_basic/pubspec.yaml
@@ -28,11 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  firebase_core: ^2.14.0
   shared_preferences: ^2.0.0
   weather: ^2.0.1
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
   intl: ^0.18.1
@@ -41,6 +41,11 @@ dependencies:
   google_maps_flutter_web: ^0.4.0+9
   http: ^0.13.6
   webview_flutter: ^2.0.14
+  image_picker: ^0.8.7+5
+  image: ^4.0.17
+  uuid: ^3.0.7
+  firebase_storage: ^11.2.3
+
 
 
   # The following adds the Cupertino Icons font to your application.
