--- a/pom.xml
+++ b/pom.xml
@@ -119,12 +119,22 @@
       <artifactId>google-cloud-storage</artifactId>
     </dependency>
 
-    <!-- !SCRIBEJAVA -->
+    <!-- !JWT -->
     <dependency>
-      <groupId>com.github.scribejava</groupId>
-      <artifactId>scribejava-apis</artifactId>
-      <version>6.4.1</version> // please use always the latest version
-    </dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.11.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>0.11.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>0.11.5</version>
+      </dependency>
     
   </dependencies>
 
