--- a/flutter_basic/android/app/src/main/AndroidManifest.xml
+++ b/flutter_basic/android/app/src/main/AndroidManifest.xml
@@ -30,5 +30,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+            
+        <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyDbKEsEY4ULk4pMbeW2VdpL-CFZSX4wfvA"/>
     </application>
+    
 </manifest>
