--- a/flutter_basic/pubspec.yaml
+++ b/flutter_basic/pubspec.yaml
@@ -37,13 +37,15 @@ dependencies:
   intl: ^0.18.1
   table_calendar: ^3.0.9
   google_maps_flutter: ^2.2.8
-  google_maps_flutter_web: ^0.4.0+9
+  google_maps_flutter_web: ^0.5.0+1
   http: ^0.13.6
-  webview_flutter: ^2.0.14
+  webview_flutter: ^4.2.2
   image_picker: ^0.8.7+5
   image: ^4.0.17
   uuid: ^3.0.7
   firebase_storage: ^11.2.3
+  url_launcher: ^6.0.3
+  external_app_launcher: ^3.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -75,6 +77,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo-1-RBH.png
+    - assets/moovit.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
