--- a/flutter_basic/pubspec.yaml
+++ b/flutter_basic/pubspec.yaml
@@ -78,6 +78,9 @@ flutter:
   assets:
     - assets/logo-1-RBH.png
     - assets/moovit.png
+    - assets/logo.png
+    - assets/icon.png
+    - assets/logoDics.ico
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
