--- a/flutter_basic/pubspec.yaml
+++ b/flutter_basic/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   google_maps_flutter: ^2.2.8
   google_maps_flutter_web: ^0.5.0+1
   http: ^0.13.6
-  webview_flutter: ^4.2.2
   image_picker: ^0.8.7+5
   image: ^4.0.17
   uuid: ^3.0.7
@@ -48,9 +47,12 @@ dependencies:
   external_app_launcher: ^3.1.0
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  image_network: ^2.5.2
+  file_picker: ^5.3.1
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +80,9 @@ flutter:
   assets:
     - assets/logo-1-RBH.png
     - assets/moovit.png
+    - assets/logo.png
+    - assets/icon.png
+    - assets/logoDics.ico
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
