--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -54,6 +54,14 @@
 		<servlet-name>servlet-storage</servlet-name>
 		<servlet-class>pt.unl.fct.di.apdc.firstwebapp.servlets.MediaResourceServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>teste</servlet-name>
+		<servlet-class>pt.unl.fct.di.apdc.firstwebapp.resources.TesteServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>teste</servlet-name>
+		<url-pattern>/rest/teste</url-pattern>
+	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>MainServices</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
