mobile dá build

--- a/flutter_basic/pubspec.yaml
+++ b/flutter_basic/pubspec.yaml
@@ -83,6 +83,7 @@ flutter:
     - assets/logo.png
     - assets/icon.png
     - assets/logoDics.ico
+    - assets/campus-1.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
