--- a/flutter_basic/pubspec.yaml
+++ b/flutter_basic/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   table_calendar: ^3.0.9
   google_maps_flutter: ^2.2.8
   google_maps_flutter_web: ^0.5.0+1
+  flutter_polyline_points: ^1.0.0
+  geolocator: ^9.0.2
+  geocoding: ^2.1.0
+  permission_handler: ^10.3.0
   http: ^0.13.6
   image_picker: ^0.8.7+5
   image: ^4.0.17
