--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,11 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>0.11.5</version>
       </dependency>
+      <dependency>
+          <groupId>com.google.appengine</groupId>
+          <artifactId>appengine-api-1.0-sdk</artifactId>
+          <version>1.9.78</version>
+      </dependency>
 
 
   </dependencies>
