--- a/flutter_basic/pubspec.yaml
+++ b/flutter_basic/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   url_launcher: ^6.0.3
   external_app_launcher: ^3.1.0
 
+  syncfusion_flutter_calendar: ^22.1.36
+  provider: ^6.0.5
+
 
 
   # The following adds the Cupertino Icons font to your application.
