--- a/flutter_basic/pubspec.yaml
+++ b/flutter_basic/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_network: ^2.5.2
   file_picker: ^5.3.1
+  emailjs: ^1.1.0
 
 dev_dependencies:
   flutter_test:
