--- a/flutter_basic/pubspec.yaml
+++ b/flutter_basic/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   image_network: ^2.5.2
   file_picker: ^5.3.1
   emailjs: ^1.1.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
