--- a/flutter_basic/pubspec.yaml
+++ b/flutter_basic/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   file_picker: ^5.3.1
   emailjs: ^1.1.0
   fluttertoast: ^8.0.8
+  synchronized: ^3.1.0
 
 dev_dependencies:
   flutter_test:
