--- a/flutter_basic/pubspec.yaml
+++ b/flutter_basic/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   emailjs: ^1.1.0
   fluttertoast: ^8.0.8
   synchronized: ^3.1.0
+  qr_flutter: ^4.1.0
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
