--- a/flutter_basic/pubspec.yaml
+++ b/flutter_basic/pubspec.yaml
@@ -93,7 +93,7 @@ flutter:
     - assets/logo-1-RBH.png
     - assets/moovit.png
     - assets/logo.png
-    - assets/icon.png
+    - assets/Icon.png
     - assets/logoDics.ico
     - assets/campus-1.png
   #   - images/a_dot_burr.jpeg
